# pfit

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: black-pylint-pytest.yml  python-publish.yml
src/: config.json  pfit.py
