[tool.poetry]
name = "pfit"
version = "0.0.0"
description = "personal finacial tools"
authors = ["ksan <casonk@umich.edu>"]
license = "LGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
